syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "SalesArrangementParameters.proto";
import "NullableGrpcDate.proto";

message UpdateSalesArrangementParametersRequest {
	int32 SalesArrangementId = 1;
	
	oneof Data {
        SalesArrangementParametersMortgage Mortgage = 20;
    }
}
