syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message UpdateSalesArrangementRequest {
	int32 SalesArrangementId = 1;
	string ContractNumber = 2;
}
